fixed window sizes with overflows

--- a/src/app/components/content/styles/Experience.module.css
+++ b/src/app/components/content/styles/Experience.module.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   gap: var(--timeline-gap);
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .timeLineItems {
@@ -28,11 +30,11 @@
 }
 
 .fadeInRight {
-  transform: translateX(100%);
+  transform: translateX(50%);
 }
 
 .fadeInLeft {
-  transform: translateX(-100%);
+  transform: translateX(-50%);
 }
 
 .visible {
