--- a/src/app/components/content/styles/SoftSkill.module.css
+++ b/src/app/components/content/styles/SoftSkill.module.css
@@ -6,7 +6,6 @@
 
   overflow: hidden;
   overflow-y: scroll;
-  height: 700px;
   padding-inline: 50px;
   scrollbar-color: rgb(96, 108, 56, 0.7) transparent;
 }
