--- a/src/app/components/styles/MainContent.module.css
+++ b/src/app/components/styles/MainContent.module.css
@@ -4,3 +4,8 @@
   grid-template-rows: 0fr;
   height: 100%;
 }
+
+.contentContainer {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
