--- a/src/app/components/styles/Window.module.css
+++ b/src/app/components/styles/Window.module.css
@@ -10,6 +10,8 @@
   border-top: none;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 
   height: 100%;
   background-image: url("/background.svg");
